welcome.lessons.welcome.bat.bool1.Makes10.scala.code
def makes10(a:Int, b:Int):Boolean = {
	(a = 10 || (b = 10)) && ((a + b) = 10)
}	